...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/listing_list_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="90dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesans"
                android:maxLines="1"
                android:text="title"
                android:textColor="#000000"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/logShipmentButton"
                style="@style/GrayOutlineButtonSmall"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginTop="12dp"
                android:text="Log Shipment"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

            <Button
                android:id="@+id/purchaseButton"
                style="@style/GrayOutlineButtonSmall"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="Purchase"
...
