...
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="#EBEBEB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logPaymentContainer" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/logPaymentContainer"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
...
                    android:text="Current Balance"
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/moneyOwed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="13dp"
                    android:fontFamily="@font/googlesans_medium"
                    android:textColor="#000000"
...
