<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/artisan_list_parent"

     >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
